# iGame

./: Cargo.toml  DEVELOPMENT.md  Makefile  README.md  ROADMAP.md  TESTING.md
.github/workflows/: auto-merge.yml  automerge.yml  ci.yml
assets/maps/demo/: manifest.toml  scene.ron
crates/editor/: Cargo.toml
crates/editor/src/: app.rs  lib.rs  main.rs
crates/editor_gizmo/: Cargo.toml
crates/editor_gizmo/src/: gizmo.rs  lib.rs  math.rs  snap.rs
crates/igame_editor/: Cargo.toml
crates/igame_editor/src/: camera.rs  gizmo.rs  main.rs  scene.rs  selection.rs  ui.rs  viewport.rs
crates/igame_editor/tests/: integration.rs
crates/igame_runtime/: Cargo.toml
crates/igame_runtime/src/: lib.rs  math.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: camera.rs  lib.rs  main.rs  map_loader.rs  scene_setup.rs  scene_spawner.rs  state.rs  world.rs
crates/runtime/tests/: integration_map_load.rs  test_runtime.rs
crates/shared/: Cargo.toml
crates/shared/src/: error.rs  lib.rs  manifest.rs  map.rs  map_package.rs  scene.rs  trigger.rs  validate.rs  validation.rs
crates/shared/tests/: golden_test.rs  integration_test.rs  test_manifest.rs  test_map_package.rs  test_scene.rs  test_validate.rs
crates/shared/tests/fixtures/demo/: manifest.toml  scene.ron
crates/shared/tests/golden/: manifest_roundtrip.toml
crates/ugc/: Cargo.toml
crates/ugc/src/: index.rs  lib.rs  registry.rs
docs/: CI_AND_AUTOMERGE.md  CONTRIBUTING.md  DEVELOPMENT.md  editor-gizmo.md  editor.md  progress-tracking.md
examples/demo_map/: manifest.toml  scene.json
maps/example_map/: manifest.toml
maps/example_map/scene/: main.json
