[workspace]
resolver = "2"
members = [
    "crates/shared",
    "crates/runtime",
    "crates/editor",
    "crates/ugc",
]

[workspace.package]
version    = "0.1.0"
edition    = "2021"
license    = "MIT OR Apache-2.0"
repository = "https://github.com/dulingzhi/iGame"

[workspace.dependencies]
# Bevy game engine
bevy = { version = "0.15", default-features = false }

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
toml       = "0.8"

# Error handling
thiserror = "1"

# Logging
log = "0.4"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto       = "thin"
