[workspace]
resolver = "2"
members = [
    "crates/shared",
    "crates/runtime",
    "crates/editor",
    "crates/ugc",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["dulingzhi"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "1"
anyhow = "1"
log = "0.4"
bevy = { version = "0.15", default-features = false, features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "bevy_scene",
    "default_font",
    "x11",
] }

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = "thin"
strip = true
