[workspace]
resolver = "2"
members = [
    "crates/shared",
    "crates/runtime",
    "crates/editor",
    "crates/ugc",
    "crates/igame_runtime",
    "crates/igame_editor",
    "crates/editor_gizmo",
]

[workspace.package]
version    = "0.1.0"
edition    = "2021"
license    = "MIT OR Apache-2.0"
authors    = ["iGame Contributors"]
repository = "https://github.com/dulingzhi/iGame"

[workspace.dependencies]
igame-shared = { path = "crates/shared" }
bevy         = { version = "0.15", default-features = true }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
toml         = "0.8"
ron          = "0.8"
thiserror    = "1"
anyhow       = "1"
log          = "0.4"

[workspace.lints.rust]
unused = "warn"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto       = "thin"
