[package]
name = "igame-editor"
description = "iGame desktop editor (War3-style UGC editor)"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

# The editor targets desktop only; it is excluded from wasm32 builds.
[dependencies]
igame-shared = { path = "../shared" }
igame-runtime = { path = "../runtime" }

[dev-dependencies]
