[package]
name = "igame-editor"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "iGame editor (stub – see ROADMAP.md for M3 plans)"

[[bin]]
name = "igame-editor"
path = "src/main.rs"

[dependencies]
igame-shared = { workspace = true }
anyhow = { workspace = true }
