[package]
name = "igame_editor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "igame_editor"
path = "src/main.rs"

[dependencies]
bevy = { version = "0.18", features = ["bevy_gizmos", "bevy_picking"] }
bevy_egui = "0.39"
igame_runtime = { path = "../igame_runtime" }

[dev-dependencies]
bevy = { version = "0.18", features = ["bevy_gizmos"] }
