[package]
name = "igame-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "iGame runtime: Bevy-based game engine with MapPackage loading"

[[bin]]
name = "igame"
path = "src/main.rs"

[dependencies]
igame-shared = { path = "../shared" }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
bevy = { workspace = true }
