[package]
name = "igame-shared"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Shared data structures and serialization for iGame MapPackage"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
