[package]
name        = "igame-shared"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
description = "Shared data types for iGame: MapPackage, Manifest, Scene, Triggers, validation"

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
toml       = { workspace = true }
ron        = { workspace = true }
thiserror  = { workspace = true }
anyhow     = { workspace = true }
