[package]
name        = "igame-ugc"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
description = "UGC package management for iGame (stub)"

[lib]
name = "igame_ugc"
path = "src/lib.rs"

[dependencies]
igame-shared = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
toml         = { workspace = true }
thiserror    = { workspace = true }
